JBTM-3803 Re-enable spring quickstarts